...
import UIKit

class AccountPhoneEnteringView: UIView {
    
    // MARK: - UI
    
    private lazy var phoneTextField: PhoneTextField = {
        let textField = PhoneTextField()
        textField.configure(with: .init(valueChangedCallback: { [weak self] isCompleted in
            self?.confirmButton.isEnabled = isCompleted
        }))
        return textField
    }()
    
    private lazy var confirmButton: PrimaryButton = {
        let button = PrimaryButton(title: StringsHelper.confirm.text())
        button.addTarget(self, action: #selector(confirmButtonPressed), for: .touchUpInside)
        return button
    }()
    
    private lazy var stackView: UIStackView = {
...
