...
        textView.isEditable = false
        textView.isScrollEnabled = false
        textView.translatesAutoresizingMaskIntoConstraints = false
        return textView
    }()
    
    private lazy var checkbox: Checkbox = {
        let checkbox = Checkbox()
        checkbox.accessibilityIdentifier = "checkbox"
        checkbox.valueChangedCallback = { [weak self] isCompleted in
            self?.isCompleted = isCompleted && self?.phoneTextField.isCompleted ?? false
        }
        checkbox.translatesAutoresizingMaskIntoConstraints = false
...
