...
import UIKit

class CodeConfirmationView: UIView {
    
    // MARK: - UI
    
    private lazy var hiddenTextField: UITextField = {
        let textField = UITextField()
        textField.accessibilityIdentifier = "hiddenTextField"
        textField.delegate = textFieldDelegate
        textField.addTarget(self, action: #selector(textFieldChanged), for: .editingChanged)
        textField.keyboardType = .numberPad
        textField.translatesAutoresizingMaskIntoConstraints = false
...
