...
    private lazy var codeConfirmationView: CodeConfirmationView = {
        let view = CodeConfirmationView()
        view.translatesAutoresizingMaskIntoConstraints = false
        return view
    }()
    
    private lazy var codeLabel: UILabel = {
        let label = UILabel()
        label.accessibilityIdentifier = "codeLabel"
        label.backgroundColor = ColorHelper.primary.color()
        label.textColor = ColorHelper.primaryButtonText.color()
        label.textAlignment = .center
        label.isHidden = true
...
